--- a/Pages/Tab/MainPage.xaml
+++ b/Pages/Tab/MainPage.xaml
@@ -26,53 +26,60 @@
                         FontFamily="Aventi"
                         Padding="0,10,0,0"/>
                 </CollectionView.Header>
+
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout ItemSpacing="10" Orientation="Vertical"/>
+                </CollectionView.ItemsLayout>
                 
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Event">
-                        <Grid ColumnDefinitions="auto, 160, 20"
-                            ColumnSpacing="6"
-                            RowDefinitions="auto, auto, *"
-                            Padding="5,15">
+                        <Border StrokeShape="RoundRectangle 10"
+                                StrokeThickness="0"
+                                BackgroundColor="#242526">
+                            <Grid ColumnDefinitions="auto, 160, 20"
+                                  ColumnSpacing="6"
+                                  RowDefinitions="auto, auto, *"
+                                  Padding="5,0">
 
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="View_Event"/>
-                            </Grid.GestureRecognizers>
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="View_Event"/>
+                                </Grid.GestureRecognizers>
 
-                            <!--Event Image-->
-                            <Border StrokeShape="RoundRectangle 10"
+                                <!--Event Image-->
+                                <Border StrokeShape="RoundRectangle 10 0 10 0"
                                 Grid.RowSpan="4"
                                 StrokeThickness="0">
-                                <Image Source="{Binding Image}"
-                                HeightRequest="125"
-                                WidthRequest="125"
-                                Aspect="AspectFill" 
+                                    <Image Source="{Binding Image}"
+                                       HeightRequest="125"
+                                       WidthRequest="125"
+                                       Aspect="AspectFill" 
                                 />
-                            </Border>
+                                </Border>
 
-                            <!--Friends Going-->
-                            <Border StrokeShape="RoundRectangle 20"
+                                <!--Friends Going-->
+                                <Border StrokeShape="RoundRectangle 20"
                                 HorizontalOptions="Start"
                                 VerticalOptions="Start"
                                 StrokeThickness="2"
                                 Stroke="black"
                                 Padding="0,0,8,0"
                                 BackgroundColor="White">
-                                <HorizontalStackLayout>
-                                    <Image Source="profile.png"
+                                    <HorizontalStackLayout>
+                                        <Image Source="profile.png"
                                         Aspect="AspectFit"
                                         WidthRequest="25"
                                         HeightRequest="25"/>
-                                    <Label Text="{Binding Friends}"
+                                        <Label Text="{Binding Friends}"
                                         FontAttributes="Bold"
                                         FontSize="14"
                                         VerticalOptions="Center"
                                         TextColor="Black"
                                         Padding="5,0,0,0"/>
-                                </HorizontalStackLayout>
-                            </Border>
+                                    </HorizontalStackLayout>
+                                </Border>
 
-                            <!--Event Name-->
-                            <Label Text="{Binding Name}"
+                                <!--Event Name-->
+                                <Label Text="{Binding Name}"
                                 FontSize="20"
                                 FontFamily="Akira"
                                 CharacterSpacing="0"
@@ -80,8 +87,8 @@
                                 Grid.ColumnSpan="2"
                                 Padding="0,8"/>
 
-                            <!--Event Age Restricitons-->
-                            <Label Text="{Binding Nineteen_Plus}"
+                                <!--Event Age Restricitons-->
+                                <Label Text="{Binding Nineteen_Plus}"
                                 FontAttributes="Bold"
                                 Grid.Column="1"
                                 Grid.Row="1"
@@ -89,15 +96,15 @@
                                 FontSize="16"
                                 Opacity="0.7"/>
 
-                            <!--Event Type-->
-                            <HorizontalStackLayout Grid.Column="2" Grid.Row="1"
+                                <!--Event Type-->
+                                <HorizontalStackLayout Grid.Column="2" Grid.Row="1"
                                                 Spacing="5">
-                                <Image WidthRequest="20"
+                                    <Image WidthRequest="20"
                                     HeightRequest="20"                                 
                                     Source="{Binding Event_Type, Converter={StaticResource EventTypeToImageConverter}}"
                                     Opacity="0.7"/>
 
-                                <Label x:Name="EventType"   
+                                    <Label x:Name="EventType"   
                                     Text="{Binding Event_Type}"
                                     HorizontalTextAlignment="Start"
                                     VerticalTextAlignment="Start"                                   
@@ -105,40 +112,41 @@
                                     FontAttributes="Bold"
                                     FontSize="16"
                                     Opacity="0.7"/>
-                            </HorizontalStackLayout>
+                                </HorizontalStackLayout>
 
 
-                            <!--Event Date-->
-                            <HorizontalStackLayout Grid.Row="2"
+                                <!--Event Date-->
+                                <HorizontalStackLayout Grid.Row="2"
                                                 Grid.Column="1">
-                                <Image Source="calendar.png"
-                                    HeightRequest="20"
-                                    WidthRequest="20"
-                                    VerticalOptions="End"
-                                    Opacity="0.7"/>
-                                <Label Text = "{Binding Date}"
+                                    <Image Source="calendar.png"
+                                            HeightRequest="20"
+                                            WidthRequest="20"
+                                            VerticalOptions="End"
+                                            Opacity="0.7"/>
+                                    <Label Text = "{Binding Date}"
                                     FontAttributes="Italic"
                                     FontSize="14"
                                     VerticalTextAlignment="End"
-                                    TextColor="#3E8EED"/>
-                            </HorizontalStackLayout>
+                                    TextColor="#B6933A"/>
+                                </HorizontalStackLayout>
 
-                            <!--People Going-->
-                            <HorizontalStackLayout Grid.Row="3" Grid.Column="2"
+                                <!--People Going-->
+                                <HorizontalStackLayout Grid.Row="3" Grid.Column="2"
                                                 Spacing="8">
-                                <Image Source="peopleunknown.png"
+                                    <Image Source="peopleunknown.png"
                                     HeightRequest="20"
                                     WidthRequest="20"
                                     VerticalOptions="End"/>
 
-                                <Label Text = "{Binding People}"
+                                    <Label Text = "{Binding People}"
                                     FontAttributes="Italic"
                                     FontSize="14"
                                     VerticalTextAlignment="End"
                                     FontFamily="Garet"
                                     Opacity="0.7"/>
-                            </HorizontalStackLayout>
-                        </Grid>
+                                </HorizontalStackLayout>
+                            </Grid>
+                        </Border>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
@@ -206,16 +214,13 @@
             <CarouselView x:Name="carouselView"
                           ItemsSource="{Binding Events}"
                           IsScrollAnimated="False"
-                          HeightRequest="650">
-                <CarouselView.ItemsLayout>
-                    <LinearItemsLayout Orientation="Vertical"/>
-                </CarouselView.ItemsLayout>
+                          HeightRequest="720">
                 <CarouselView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
                             <Image Source="{Binding Image}"
                                    Aspect="AspectFill"
-                                   HeightRequest="650"/>
+                                   HeightRequest="720"/>
                         </StackLayout>
                     </DataTemplate>
                 </CarouselView.ItemTemplate>
